--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/* IMPORT FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap'); /* Teko */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap'); /* Playfair Display */
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap'); /* Permanent Marker */
+@import url('https://fonts.googleapis.com/css2?family=Schoolbell&display=swap'); /* Schoolbell */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -79,8 +85,12 @@
 body {
   margin: 0; /* ???? */
 
-  /* TODO: Estilo de letra */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  /* ESTILO DE LETRA */
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+  font-family: 'Teko', sans-serif;
+  /* font-family: 'Playfair Display', serif; */
+  /* font-family: 'Permanent Marker', cursive; */
+  /* font-family: 'Schoolbell', cursive; */
 
   /* TODO: Color de fondo */
   background-color: #8E2626; /* my-red-800 */
